...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/profileTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:paddingTop="12dp"
                android:text="@{elements.profileName}"
                android:textSize="30sp"
...
